--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -70,7 +70,7 @@
                 </div>
 
                 <div flex>
-                    <showtags entity="challenge"></showtags>
+                    <show-tags model="challenge.tags"></show-tags>
 
                     <list-notes challenge="challenge" current-user="currentUser"></list-notes>
 
