--- a/client/app/modules/idea/templates/idea-create.tpl.html
+++ b/client/app/modules/idea/templates/idea-create.tpl.html
@@ -9,7 +9,8 @@
                         <input id="title" type="text" ng-model="idea.title" />
                     </md-input-container>
 
-                    <tag-manager entity="idea"></tag-manager>
+                    <p>Tags</p>
+                    <tag-manager model="idea.tags"></tag-manager>
 
                     <md-input-container>
                         <label>What's your idea?</label>
