--- a/client/app/modules/profile/templates/profile.tpl.html
+++ b/client/app/modules/profile/templates/profile.tpl.html
@@ -19,7 +19,7 @@
                 <md-button class="md-raised" ng-if="profile._id == currentUser._id" ui-sref="profileAdmin" flex>
                     <i class="fa fa-pencil-square-o baseColor"></i> Edit
                 </md-button>
-                <showtags entity="profile" style="margin-left: 50px;"></showtags>
+                <show-tags model="profile.tags" style="margin-left: 50px;"></show-tags>
 
                 <md-divider></md-divider>
                 <h3>Presentation</h3>
