--- a/client/app/modules/project/templates/project.tpl.html
+++ b/client/app/modules/project/templates/project.tpl.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
 
-                <showtags entity="project"></showtags>
+                <show-tags model="project.tags"></show-tags>
 
                 <section flex ui-view="projectView"></section>
             </md-content>
