--- a/client/app/modules/header/templates/searchBar.tpl.html
+++ b/client/app/modules/header/templates/searchBar.tpl.html
@@ -17,7 +17,7 @@
                 <div class="md-tile-content">
                     <div>
                         <div>{{result.title ||result.username}}</div>
-                        <showtags entity="result" ></showtags>
+                        <show-tags model="result.tags" ></show-tags>
                     </div>
                 </div>
                 <div class="md-tile-right" ng-if="result.tags">
