--- a/client/app/modules/idea/templates/idea.tpl.html
+++ b/client/app/modules/idea/templates/idea.tpl.html
@@ -55,7 +55,7 @@
                     </div>
 
                     <div layout="column">
-                        <showtags entity="idea"></showtags>
+                        <show-tags model="idea.tags"></show-tags>
 
                         <list-notes idea="idea" current-user="currentUser"></list-notes>
                     </div>
