--- a/client/app/modules/profile/templates/profile.tpl.html
+++ b/client/app/modules/profile/templates/profile.tpl.html
@@ -33,10 +33,9 @@
                     </div>
 
                     <div>
-                        <!-- <challenge-card ng-repeat="challenge in moreData.challenges" admin="true" challenge-id="challenge._id"></challenge-card> -->
                         <md-grid-list md-cols="3" md-row-height="500px">
                             <md-grid-tile ng-repeat="challenge in moreData.challenges">
-                                <challenge-card class="md-whiteframe-z2" admin="true" challenge-id="challenge._id" style="height: 410px;"></challenge-card> 
+                                <challenge-more-card class="md-whiteframe-z2" admin="true" challenge-id="challenge._id" style="height: 410px;"></challenge-more-card> 
                             </md-grid-tile>
                         </md-grid-list>
                     </div>
@@ -50,10 +49,9 @@
                     </div>
 
                     <div>
-                        <!-- <challenge-card ng-repeat="challenge in moreData.followedChallenges" challenge-id="challenge._id"></challenge-card> -->
                         <md-grid-list md-cols="3" md-row-height="500px">
                             <md-grid-tile ng-repeat="challenge in moreData.challenges">
-                                <challenge-card class="md-whiteframe-z2" admin="true" challenge-id="challenge._id" style="height: 410px;"></challenge-card> 
+                                <challenge-more-card class="md-whiteframe-z2" admin="true" challenge-id="challenge._id" style="height: 410px;"></challenge-more-card> 
                             </md-grid-tile>
                         </md-grid-list>
                     </div>
