WIP: working on highlighting unseen notification

--- a/client/app/modules/profile/templates/feed.tpl.html
+++ b/client/app/modules/profile/templates/feed.tpl.html
@@ -7,7 +7,7 @@
                 </div>
             </md-toolbar>
             <md-content>
-                <notification-list notifications="notifications"></notification-list>
+                <notification-list notifications="notifications" highlight-after-date="lastSeenNotificationDate"></notification-list>
             </md-content>
         </section>
     </md-content>
