place and resize picture of user-info

--- a/client/app/modules/header/sass/header.scss
+++ b/client/app/modules/header/sass/header.scss
@@ -33,6 +33,18 @@
   border-radius : 100%;
 }
 
+.img-rounded{
+  border-radius : 100%;
+  width: 40px;
+  top: 20px;
+  position: relative;
+}
+
+.username-info-card{
+  color: black;
+  text-decoration: none;
+}
+
 .menu {
   padding: 10px;
   
