modification of contact

--- a/client/app/modules/home/templates/contact.tpl.html
+++ b/client/app/modules/home/templates/contact.tpl.html
@@ -24,7 +24,7 @@
                     <md-card-content>
                         <a class="link-no-decoration" href="http://citizencyberlab.eu/"><h2 class="md-title">Citizen Cyberlab</h2></a>
                         <p>
-                          Click for report a bug on github.
+                          IdeaWeave has been created as part of the Citizen Cyberlab European project.
                         </p>
                     </md-card-content>
                 </md-card>
@@ -34,9 +34,19 @@
                 <md-card>
                     <a href="https://github.com/CyberCRI/IdeaWeave/issues/new"><img ng-src="images/github-logo.png" class="md-card-image" alt="cri"></a>
                     <md-card-content>
-                        <a class="link-no-decoration" href="https://github.com/CyberCRI/IdeaWeave/issues/new"><h2 class="md-title">Github issues</h2></a>
+                        <a class="link-no-decoration" href="https://github.com/CyberCRI/IdeaWeave/issues/new"><h2 class="md-title">Report an issues</h2></a>
                         <p>
-                          Click for report a bug on github.
+                          Click to report a bug on github.
+                        </p>
+                    </md-card-content>
+                </md-card>
+
+                <md-card>
+                    <a href="https://github.com/CyberCRI/IdeaWeave"><img ng-src="images/github-logo.png" class="md-card-image" alt="cri"></a>
+                    <md-card-content>
+                        <a class="link-no-decoration" href="https://github.com/CyberCRI/IdeaWeave"><h2 class="md-title">GitHub</h2></a>
+                        <p>
+                          IdeaWeave is completely open source and available on GitHub.
                         </p>
                     </md-card-content>
                 </md-card>
