--- a/client/app/modules/profile/templates/profile.tpl.html
+++ b/client/app/modules/profile/templates/profile.tpl.html
@@ -2,7 +2,7 @@
     <md-content layout="row" layout-align="center" layout-margin>
         <section class="md-whiteframe-z2" flex-gt-sm="75" layout="column">
             <md-toolbar layout-padding class="md-default-theme">
-                <img ng-src="{{ currentUser.poster || 'images/avater.jpg' }}" alt="{{ currentUser.username }}'s photo" class="img-rounded img-profile-page"/>
+                <img ng-src="{{ profile.poster || 'images/avater.jpg' }}" alt="{{ profile.username }}'s photo" class="img-rounded img-profile-page"/>
                 <h3 style="margin-top:0;margin-bottom:0;font-size:50px;">
                    {{ profile.realname || profile.username }}
                     <i style="color:yellow" class="fa" ng-class="{ 'fa-star' : isFollowing }"></i>
