Search shows icons

--- a/client/app/modules/header/sass/header.scss
+++ b/client/app/modules/header/sass/header.scss
@@ -58,3 +58,11 @@
   text-align: center;
   color: white;
 }
+
+.search-poster {
+  width: 25px;
+  height: 25px;
+  border-radius: 100%;
+  display: inline-block;
+}
+
