--- a/client/app/modules/home/templates/contact.tpl.html
+++ b/client/app/modules/home/templates/contact.tpl.html
@@ -7,10 +7,17 @@
                 </div>
             </md-toolbar>
             <md-content flex layout-padding>
+                <h2>About IdeaWeave :</h2>
+                <p>Education systems need to empower the next generation of learners with creative spirits and skills, to prepare them for a world that is changing at an unprecedented pace. New solutions are required to enable creative learning in a large population of citizens. The idea incubation platform, IdeaWeave, helps facilitate this shift in learning paradigms by providing tools for users to be part of collaborative projects.</p>
+                <p>In order to facilitate collaborative work around important projects in citizen science, IdeaWeave adhere to four main objectives: </p>
+                <ul>
+                    <li>1.  Enable organizations and individuals to pose challenges to a community of interested users – As the success of citizen science has shown, a good number of people would like to contribute their skills and time to worthwhile causes. IdeaWeave helps organizations define the challenges that they need help with.</li>
+                    <li>2.  Help users unite around common ideas – Luckily, ideas are rarely unique. IdeaWeave helps users find others that share their ideas and who would like to work together to develop the idea into a full project. Ideally, such collaborators have complementary skills that will allow the group to overcome the obstacles inherent in bringing their idea to reality.</li>
+                    <li>3.  Provide a platform for collaborative project development – A good number of collaborative tools are now freely available on the web (e.g. Google Drive or Hackpad for documents, GitHub for code, Dropbox for files, etc.). IdeaWeave helps users by bringing these tools together within the context of a project.</li>
+                    <li>4.  Promote challenges and projects – Although IdeaWeave is not primarily a promotional or marketing tool, the activity around popular projects will help promote those to a larger community, bringing in larger communities.</li>
+                </ul>
 
-                <h3>Partner:</h3>
-
-                <md-card>
+                <md-card class="contact-card md-whiteframe-z4">
                     <a href="http://cri-paris.org/"><img ng-src="images/cri-logo.jpg" class="md-card-image" alt="cri"></a>
                     <md-card-content>
                         <a class="link-no-decoration" href="http://cri-paris.org/"><h2 class="md-title">Centre de Recherche Interdiciplinaire</h2></a>
@@ -19,7 +26,7 @@
                         </p>
                     </md-card-content>
                 </md-card>
-                <md-card>
+                <md-card class="contact-card md-whiteframe-z4">
                     <a href="http://citizencyberlab.eu/"><img ng-src="images/CClogo.png" class="md-card-image" alt="cri"></a>
                     <md-card-content>
                         <a class="link-no-decoration" href="http://citizencyberlab.eu/"><h2 class="md-title">Citizen Cyberlab</h2></a>
@@ -28,20 +35,7 @@
                         </p>
                     </md-card-content>
                 </md-card>
-
-                <h3>Report a bug:</h3>
-
-                <md-card>
-                    <a href="https://github.com/CyberCRI/IdeaWeave/issues/new"><img ng-src="images/github-logo.png" class="md-card-image" alt="cri"></a>
-                    <md-card-content>
-                        <a class="link-no-decoration" href="https://github.com/CyberCRI/IdeaWeave/issues/new"><h2 class="md-title">Report an issues</h2></a>
-                        <p>
-                          Click to report a bug on github.
-                        </p>
-                    </md-card-content>
-                </md-card>
-
-                <md-card>
+                <md-card class="contact-card md-whiteframe-z4">
                     <a href="https://github.com/CyberCRI/IdeaWeave"><img ng-src="images/github-logo.png" class="md-card-image" alt="cri"></a>
                     <md-card-content>
                         <a class="link-no-decoration" href="https://github.com/CyberCRI/IdeaWeave"><h2 class="md-title">GitHub</h2></a>
@@ -50,6 +44,24 @@
                         </p>
                     </md-card-content>
                 </md-card>
+                <br>
+                <br>
+
+                <h2>Contact Us :</h2>
+                <p>if you encounted a problem or have an idea for a new feature, please tel us about it :</p>
+
+                <md-card class="contact-card md-whiteframe-z4">
+                    <a href="https://github.com/CyberCRI/IdeaWeave/issues/new"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="255px" height="230px" style="margin: auto;" viewBox="0 0 512 553.861" enable-background="new 0 0 512 553.861" xml:space="preserve">
+                    <path d="M376.889,0c19.639,0,35.556,15.917,35.556,35.556c0,19.639-15.917,35.556-35.556,35.556l-9.041-1.16l-32.82,42.007  c22.64,16.292,42.306,39.375,57.542,67.278c-38.861,12.541-85.902,19.875-136.569,19.875c-50.674,0-97.708-7.334-136.569-19.875  c14.729-26.973,33.59-49.438,55.277-65.625l-33.597-43c-1.951,0.326-3.951,0.5-6,0.5c-19.639,0-35.556-15.917-35.556-35.556  C99.556,15.917,115.473,0,135.111,0s35.556,15.917,35.556,35.556c0,7.139-2.104,13.784-5.723,19.354l34.194,43.764  c17.785-8.639,36.924-13.341,56.861-13.341c18.973,0,37.223,4.257,54.264,12.111l35.264-45.125c-2.68-5-4.194-10.701-4.194-16.764  C341.333,15.917,357.25,0,376.889,0z M490.667,298.667c11.777,0,21.333,9.556,21.333,21.333s-9.556,21.333-21.333,21.333h-64.694  c-1.015,15.431-3.111,30.417-6.195,44.848l75.236,35.069c10.681,4.986,15.292,17.681,10.319,28.361  c-4.972,10.666-17.666,15.291-28.347,10.319l-69.292-32.319c-26.306,70-77.5,119.444-137.472,126.25v-326.5  c50.36-1.375,96.583-10,134.027-23.694l2.777,6.931l72.695-27.91c11-4.223,23.333,1.271,27.555,12.271  c4.223,11-1.277,23.341-12.277,27.562l-75.694,29.062c3.333,15.104,5.611,30.861,6.667,47.084H490.667z M21.333,298.667h64.694  c1.062-16.223,3.327-31.979,6.674-47.084l-75.708-29.062c-11-4.222-16.493-16.562-12.271-27.562s16.562-16.493,27.562-12.271  l72.695,27.91l2.771-6.931c37.438,13.694,83.667,22.319,134.027,23.694v326.5c-59.979-6.806-111.166-56.25-137.479-126.25  l-69.285,32.319c-10.68,4.986-23.375,0.347-28.354-10.319c-4.979-10.681-0.354-23.375,10.319-28.361l75.236-35.069  c-3.076-14.431-5.173-29.417-6.188-44.848H21.333C9.549,341.333,0,331.777,0,320S9.549,298.667,21.333,298.667z" fill="#000000"/>
+                    </svg></a>
+                    <md-card-content>
+                        <a class="link-no-decoration" href="https://github.com/CyberCRI/IdeaWeave/issues/new"><h2 class="md-title">Report an issues</h2></a>
+                        <p>
+                          Click to report an issue on github.
+                        </p>
+                    </md-card-content>
+                </md-card>
+
             </md-content>
         </section>
     </md-content>
