--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -121,3 +121,11 @@ header{
   text-decoration: none;
   color: black;
 }
+
+.contact-card {
+  min-width: 280px;
+  max-width: 280px;
+  display: inline-block;
+  margin: 40px;
+  padding: 10px;
+}
