fix of some error

--- a/client/app/modules/home/templates/contact.tpl.html
+++ b/client/app/modules/home/templates/contact.tpl.html
@@ -20,9 +20,9 @@
                 <md-card class="contact-card md-whiteframe-z4">
                     <a href="http://cri-paris.org/"><img ng-src="images/cri-logo.jpg" class="md-card-image" alt="cri"></a>
                     <md-card-content>
-                        <a class="link-no-decoration" href="http://cri-paris.org/"><h2 class="md-title">Centre de Recherche Interdiciplinaire</h2></a>
+                        <a class="link-no-decoration" href="http://cri-paris.org/"><h2 class="md-title">Centre de Recherche Interdiciplinaires</h2></a>
                         <p>
-                          IdeaWeave has been released in the CRI.
+                          IdeaWeave has been develloped and maintained by the CRI.
                         </p>
                     </md-card-content>
                 </md-card>
@@ -48,7 +48,7 @@
                 <br>
 
                 <h2>Contact Us :</h2>
-                <p>if you encounted a problem or have an idea for a new feature, please tel us about it :</p>
+                <p>if you encounted a problem or have an idea for a new feature, please tell us about it :</p>
 
                 <md-card class="contact-card md-whiteframe-z4">
                     <a href="https://github.com/CyberCRI/IdeaWeave/issues/new"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="255px" height="230px" style="margin: auto;" viewBox="0 0 512 553.861" enable-background="new 0 0 512 553.861" xml:space="preserve">
@@ -57,7 +57,7 @@
                     <md-card-content>
                         <a class="link-no-decoration" href="https://github.com/CyberCRI/IdeaWeave/issues/new"><h2 class="md-title">Report an issues</h2></a>
                         <p>
-                          Click to report an issue on github.
+                          Click to report an issue on GitHub.
                         </p>
                     </md-card-content>
                 </md-card>
