add like button that works properly on project home page, project-card, project-card on first page, challenge home page. add like button that don't works on idea home page, challenge-card, challenge-more-card. add new visual for follow button

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -135,12 +135,14 @@ header{
   position: absolute;
   /*top: -32px;*/
   margin-top: -30px;
-  margin-left: 20px;
+  margin-left: 100px;
+  z-index: 100;
 }
 
-.dislike {
+.follow {
   position: absolute;
   /*top: -32px;*/
   margin-top: -30px;
-  margin-left: 190px;
+  margin-left: 200px;
+  z-index: 100;
 }
