--- a/client/app/modules/idea/templates/idea.tpl.html
+++ b/client/app/modules/idea/templates/idea.tpl.html
@@ -8,11 +8,14 @@
                     </h1>
                 </div>
 
-                <div ng-if="isFollow">
+                <div ng-if="isFollowing()">
                     <i class="fa fa-star baseColor"></i> Following
                 </div>
 
-                <md-button class="md-fab md-raised" ng-click="follow()" style="position:absolute; right:20px; z-index: inherit" ng-class="{ 'md-accent' : isFollowing() }" ng-if="currentUser && !isOwner" analytics-on analytics-event="like">
+                <md-button class="md-fab md-raised" ng-click="follow()" style="bottom:-24px;position:absolute; right:20px;z-index : inherit" ng-class="{ 'md-accent' : isFollowing() }" ng-if="currentUser && !isOwner">
+                    <i class="fa fa-eye"></i>
+                </md-button>
+                <md-button class="md-fab md-raised" ng-click="like()" style="bottom:-24px;position:absolute; right:90px;z-index : inherit" ng-class="{ 'md-accent' : isLike }" ng-if="currentUser && !isOwner">
                     <i class="fa fa-thumbs-up"></i>
                 </md-button>
             </md-toolbar>
