--- a/client/app/modules/project/templates/project.tpl.html
+++ b/client/app/modules/project/templates/project.tpl.html
@@ -5,10 +5,13 @@
                 <div layout="column" class="content">
                     <h1>
                         {{ project.title }}
-                    </h1>        
+                    </h1>
                 </div>
 
                 <md-button class="md-fab md-raised" ng-click="follow()" style="bottom:-24px;position:absolute; right:20px;z-index : inherit" ng-class="{ 'md-accent' : isFollow }" ng-if="currentUser && !isOwner">
+                    <i class="fa fa-eye"></i>
+                </md-button>
+                <md-button class="md-fab md-raised" ng-click="like()" style="bottom:-24px;position:absolute; right:90px;z-index : inherit" ng-class="{ 'md-accent' : isLike }" ng-if="currentUser && !isOwner">
                     <i class="fa fa-thumbs-up"></i>
                 </md-button>
             </md-toolbar>
@@ -39,6 +42,14 @@
                             &nbsp;
                         <span class="text-muted">
                             followers
+                        </span>
+                            &nbsp;
+                        <span>
+                            {{ project.likers.length }}
+                        </span>
+                            &nbsp;
+                        <span class="text-muted">
+                            like
                         </span>
                             &nbsp;
                         <span>
