--- a/client/app/modules/notification/templates/socketToast.tpl.html
+++ b/client/app/modules/notification/templates/socketToast.tpl.html
@@ -1,3 +1,3 @@
 <md-toast style="padding-left:0px;padding-right:0px;" analytics-on analytics-event="clickRemoteToast">
-    <notification notification="notification">
+    <notification notification="notification" brief="true">
 </md-toast>
