Show owners, follower, members of projects, ideas, challenges

--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -17,7 +17,6 @@
             </md-toolbar>
 
             <md-content layout="column" layout-fill layout-padding>
-
                 <div layout="row" layout-align="center center">
                     <img ng-if="challenge.banner" src="{{ challenge.banner }}" >
                 </div>
@@ -74,9 +73,21 @@
                     </div>
                 </div>
 
-                <div flex>
-                    <show-tags model="challenge.tags"></show-tags>
+                <show-tags model="challenge.tags"></show-tags>
 
+                <div layout="row" layout-align="start center">
+                    <div>Created by</div>
+                    <user-info my-user="challenge.owner"></user-info>
+                </div>
+
+                <div layout="row" layout-align="start center">
+                    <div>Followed by</div>
+                    <div layout="row" layout-wrap>
+                        <user-info my-user="follower" ng-repeat="follower in challenge.followers"></user-info>
+                    </div>
+                </div>
+
+                <div flex>
                     <list-notes challenge="challenge" current-user="currentUser"></list-notes>
 
                     <h3>Related Projects</h3>
