--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -159,3 +159,19 @@ header{
   margin: 40px;
   padding: 10px;
 }
+
+#loading-screen {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 100;
+
+  #loading-progress-bar {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  }
+}
