WIP: challenges giving badges

--- a/client/app/modules/badge/templates/badge-card.tpl.html
+++ b/client/app/modules/badge/templates/badge-card.tpl.html
@@ -1,4 +1,5 @@
-<md-content layout-padding>
+<div layout-padding>
+	<img ng-src="{{ badge.image || '/images/placeholder100x100.png' }}">
     <h2>{{ badge.title }}</h2>
-    <h2>{{ badge.description }}</h2>
-</md-content>
+    <p>{{ badge.description }}</p>
+</div>
