--- a/client/app/modules/admin/challenge/templates/challengeSettings.tpl.html
+++ b/client/app/modules/admin/challenge/templates/challengeSettings.tpl.html
@@ -54,4 +54,14 @@
     </md-list>
 
     <md-button ng-click="popUpCreateTemplate()"><i class="fa fa-plus"></i> Add a template</md-button>
+
+    <h2>Badges</h2>
+
+    <div layout="row" layout-wrap>
+        <div ng-repeat="badge in badges">
+            <badge-card my-badge="badge"></badge-card>
+            <md-button class="md-raised" ng-click="popUpGiveBadge(badge)"><i class="fa fa-share"></i> Give Badge</md-button>
+        </div>
+    </div>
+    <p ng-if="!badges">No badges so far.</p>
 </md-content>
