--- a/client/app/modules/profile/templates/profile.tpl.html
+++ b/client/app/modules/profile/templates/profile.tpl.html
@@ -26,6 +26,13 @@
                 <div ng-bind-html="profile.secureBrief"></div>
 
                 <md-divider></md-divider>
+                <h3>Badges</h3>
+                <div layout="row">
+                    <badge-card ng-repeat="badge in profile.badges" badge-id="badge"></badge-card>
+                </div>
+                <p ng-if="!profile.badges">No badges so far.</p>
+
+                <md-divider></md-divider>
                 <h3>Contributions</h3>
                 <div ng-if="moreData.challenges.length > 0">
                     <div>
