--- a/client/app/modules/notes/templates/show-notes.tpl.html
+++ b/client/app/modules/notes/templates/show-notes.tpl.html
@@ -3,14 +3,14 @@
     <md-button ng-if="canPostNote()" ng-click="popUpNewNote()" analytics-on analytics-event="postNote"><i class="fa fa-pencil-square-o"></i> Post new note</md-button>
 
     <article ng-repeat="note in notes">
-        <p class="note-info">Note posted by {{ note.owner.username }} <span timeago time-ago from-time="{{ note.createDate }}"></span></p>
+        <p class="note-info">Note posted by {{ note.owner.username }} <span time-ago from-time="{{ note.createDate }}"></span></p>
         <md-button ng-if="canDeleteNote(note)" ng-click="deleteNote(note)" analytics-on analytics-event="deleteNote"><i class="fa fa-times"></i> Delete Note</md-button>
         <p ng-bind-html="note.text"></p>
 
         <div flex offset="10">
             <h3>Comments</h3>
             <md-card class="comment-block" ng-repeat="comment in note.comments" layout-padding>
-                <p style="color: #9E9E9E;" class="note-info">Comment posted by {{ comment.owner.username }} <span timeago time-ago from-time="{{ comment.createDate }}"></span><md-button style="font-size: 0.7em;" ng-if="canDeleteComment(note, comment)" ng-click="deleteComment(note, comment)" analytics-on analytics-event="deleteComment"><i class="fa fa-times"></i> Delete Comment</md-button></p>
+                <p style="color: #9E9E9E;" class="note-info">Comment posted by {{ comment.owner.username }} <span time-ago from-time="{{ comment.createDate }}"></span><md-button style="font-size: 0.7em;" ng-if="canDeleteComment(note, comment)" ng-click="deleteComment(note, comment)" analytics-on analytics-event="deleteComment"><i class="fa fa-times"></i> Delete Comment</md-button></p>
                 <p ng-bind-html="comment.text | linky" class="show-line-breaks"></p>
             </md-card>
 
