--- a/client/app/modules/admin/challenge/templates/challengeSettings.tpl.html
+++ b/client/app/modules/admin/challenge/templates/challengeSettings.tpl.html
@@ -57,6 +57,8 @@
 
     <h2>Badges</h2>
 
+    <md-button class="md-raised" ng-click="popUpCreateBadge()"><i class="fa fa-plus"></i> Create Badge</md-button>
+
     <div layout="row" layout-wrap>
         <div ng-repeat="badge in badges">
             <badge-card my-badge="badge"></badge-card>
@@ -64,4 +66,5 @@
         </div>
     </div>
     <p ng-if="!badges">No badges so far.</p>
+
 </md-content>
