--- a/client/app/modules/admin/challenge/templates/challengeSettings.tpl.html
+++ b/client/app/modules/admin/challenge/templates/challengeSettings.tpl.html
@@ -57,12 +57,13 @@
 
     <h2>Badges</h2>
 
-    <md-button class="md-raised" ng-click="popUpCreateBadge()"><i class="fa fa-plus"></i> Create Badge</md-button>
+    <md-button ng-click="popUpCreateBadge()"><i class="fa fa-plus"></i> Create Badge</md-button>
 
     <div layout="row" layout-wrap>
-        <div ng-repeat="badge in badges">
+        <div ng-repeat="badge in badges" layout="column">
             <badge-card my-badge="badge"></badge-card>
-            <md-button class="md-raised" ng-click="popUpGiveBadge(badge)"><i class="fa fa-share"></i> Give Badge</md-button>
+            <md-button ng-click="popUpGiveBadge(badge)"><i class="fa fa-share"></i> Give Badge</md-button>
+            <md-button ng-if="canModifyBadge(badge)" ng-click="popUpModifyBadge(badge)"><i class="fa fa-pencil-square-o"></i> Modify Badge</md-button>
         </div>
     </div>
     <p ng-if="!badges">No badges so far.</p>
