Getting rid of tabs on project admin page

--- a/client/app/modules/admin/project/templates/edit.tpl.html
+++ b/client/app/modules/admin/project/templates/edit.tpl.html
@@ -1,4 +1,8 @@
 <md-content layout="column" layout-fill>
+    <h2 class="center">
+        Settings
+    </h2>
+
     <div>
         <md-button ng-click="popUpEdit()">
             Edit Home Page
